    build-dependencies needed when testing on a live CD.
  * If ubiquity is started with no arguments, try both the gtkui and kde-ui
    frontends rather than just gtkui.
  * Explicitly return Unicode strings from ubiquity.misc.get_string(),
    simplifying the KDE frontend.
  * Add a no-op anna-install shim for localechooser, ensuring that locales
    are generated.
  * KDE frontend:
    - Fix set_username() to really set the username, not the full name.
    - Fix automatic filling in of values on user information page.

  [ Jonathan Riddell ]
  * KDE Frontend:
    - Remove broken import

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 24 Apr 2006 10:16:28 +0100

ubiquity (0.99.65) dapper; urgency=low

  * KDE Frontend:
    - Fix install paths of Crystal icon 

 -- Jonathan Riddell <jriddell@ubuntu.com>  Sun, 23 Apr 2006 22:37:58 +0000

ubiquity (0.99.64) dapper; urgency=low

  * GTK frontend:
    - Use xscreensaver-command --deactivate, not --disable (closes: Malone
      #40095).
    - Hide "Set Time..." button if time-admin isn't present.
    - Recommend gnome-system-tools for time-admin.
  * KDE frontend:
    - Fix import of UbiquityUIBase (closes: Malone #40939).
  * Set the SIGPIPE handler back to the default before spawning
    debconffiltered subprocesses, so that they notice when the UI crashes
    rather than carrying merrily on and e.g. trashing the partition table
    (closes: Malone #40464). Whose bright idea was it to have Python install
    a SIGPIPE handler but then not bother to have the subprocess module
    remove it, eh?

 -- Colin Watson <cjwatson@ubuntu.com>  Sun, 23 Apr 2006 19:07:52 +0100

ubiquity (0.99.63) dapper; urgency=low

  * Additional base build-dependencies need to go in d-i/update-control to
    survive 'debian/rules update'. Add python-kde3-dev there.
  * Fix 'debian/rules build' to notice when kdepyuic fails.
  * Fix crash in keyboard selector if no keyboard is selected (closes:
    Malone #40658).